# Garlemald-Server

./: .gitignore  Cargo.toml  NOTICE.md  README.md
common/: Cargo.toml  build.rs
common/sql/: schema.sql
common/sql/seed/: 001_gamedata_achievements.sql  003_gamedata_actor_class.sql  004_gamedata_actor_pushcommand.sql  005_gamedata_guildleves.sql  007_gamedata_items_accessory.sql  008_gamedata_items_armor.sql  009_gamedata_items_equipment.sql  010_gamedata_items_graphics.sql  011_gamedata_items_graphics_extra.sql  012_gamedata_items_weapon.sql  013_server_battle_commands.sql  014_server_battle_traits.sql  015_server_battlenpc_genus.sql  016_server_battlenpc_genus_mods.sql  017_server_battlenpc_groups.sql  018_server_battlenpc_pool_mods.sql  019_server_battlenpc_pools.sql  020_server_battlenpc_skill_list.sql  021_server_battlenpc_spawn_locations.sql  022_server_battlenpc_spawn_mods.sql  023_server_battlenpc_spell_list.sql  024_server_items.sql  025_server_items_dealing.sql  026_server_items_modifiers.sql  027_server_linkshells.sql  028_server_retainers.sql  029_server_seamless_zonechange_bounds.sql  030_server_sessions.sql  031_server_spawn_locations.sql  032_server_statuseffects.sql  033_server_zones.sql  034_server_zones_privateareas.sql  035_server_zones_spawnlocations.sql  036_servers.sql  037_supportdesk_faqs.sql  038_supportdesk_issues.sql  039_supportdesk_tickets.sql  040_quest_schema_redesign.sql  041_gamedata_quests.sql  042_gamedata_recipes.sql  (+9 more)
common/src/: bitfield.rs  bitstream.rs  blowfish.rs  blowfish_tables.rs  db.rs  error.rs  hash_table.rs  ini.rs  lib.rs  logging.rs  luaparam.rs  math.rs  migrations.rs  packet.rs  packet_log.rs  subpacket.rs  utils.rs
configs/: lobby.toml  map.toml  web.toml  world.toml
docs/: post_warp_respawn_fix_analysis.md
lobby-server/: Cargo.toml
lobby-server/src/: character_creator.rs  config.rs  data.rs  database.rs  hardcoded.rs  main.rs  packets.rs  processor.rs  server.rs
lobby-server/src/data/: chara_info.rs
lobby-server/src/packets/: receive.rs  send.rs
map-server/: Cargo.toml
map-server/src/: actor.rs  command_processor.rs  config.rs  data.rs  database.rs  gamedata.rs  lua.rs  main.rs  packets.rs  processor.rs  server.rs  world_manager.rs
map-server/src/achievement/: dispatcher.rs  mod.rs  outbox.rs
map-server/src/actor/: aetheryte.rs  chara.rs  event_conditions.rs  gc.rs  inn.rs  mod.rs  modifier.rs  player.rs  quest.rs
map-server/src/battle/: ai_container.rs  command.rs  controller.rs  effects.rs  hate.rs  mod.rs  outbox.rs  path_find.rs  save.rs  state.rs  target_find.rs  temp.rs  traits.rs  utils.rs
map-server/src/crafting/: mod.rs  passive_guildleve.rs  passive_guildleve_data.rs  recipe.rs  resolver.rs
map-server/src/director/: director.rs  dispatcher.rs  guildleve.rs  guildleve_work.rs  mod.rs  outbox.rs
map-server/src/event/: dispatcher.rs  lua_bridge.rs  mod.rs  outbox.rs  quest.rs  session.rs
map-server/src/gathering/: mod.rs  node.rs  resolver.rs  spawn.rs
map-server/src/group/: content.rs  dispatcher.rs  mod.rs  monster.rs  outbox.rs  party.rs  relation.rs  types.rs
map-server/src/inventory/: mod.rs  outbox.rs  referenced.rs
map-server/src/leve/: data.rs  mod.rs  resolver.rs  view.rs
map-server/src/lua/: catalogs.rs  command.rs  globals.rs  gm_command.rs  mod.rs  paths.rs  scheduler.rs  userdata.rs
map-server/src/npc/: actor_class.rs  ally.rs  battle_npc.rs  mob_modifier.rs  mod.rs  npc.rs  npc_work.rs  pet.rs  retainer.rs  spawner.rs
map-server/src/packets/: opcodes.rs  receive.rs  send.rs
map-server/src/packets/send/: actor.rs  actor_battle.rs  actor_events.rs  actor_inventory.rs  events.rs  groups.rs  handshake.rs  misc.rs  mod.rs  player.rs  recruitment.rs  search.rs  social.rs  supportdesk.rs  world_packets.rs
map-server/src/runtime/: actor_registry.rs  broadcast.rs  dispatcher.rs  integration_tests.rs  mod.rs  quest_apply.rs  quest_hook.rs  ticker.rs
map-server/src/social/: chat.rs  dispatcher.rs  friendlist.rs  mod.rs  outbox.rs  recruitment.rs  support.rs
map-server/src/status/: flags.rs  ids.rs  mod.rs  outbox.rs
map-server/src/zone/: area.rs  mod.rs  navmesh.rs  outbox.rs  private_area.rs  spawn_location.rs  zone.rs
scripts/: _lib.cmd  _lib.sh  build.cmd  build.sh  check-env.cmd  check-env.sh  convert-meteor-sql.py  run-all.cmd  run-all.sh  run-lobby.cmd  run-lobby.sh  run-map.cmd  run-map.sh  run-web.cmd  run-web.sh  run-world.cmd  run-world.sh  stop-all.cmd  test.cmd  test.sh
scripts/lua/: global.lua  player.lua  quest.lua
scripts/lua/commands/: Ability.lua  ActivateCommand.lua  AttackAbility.lua  AttackMagic.lua  AttackWeaponSkill.lua  BonusPointCommand.lua  CmnAttackWeaponSkill.lua  CraftCommand.lua  CureMagic.lua  DummyCommand.lua  EquipAbilityCommand.lua  NpcLinkshellChatCommand.lua  PlaceDrivenCommand.lua  PointSearchAbility.lua  ShotCommand.lua  TeleportCommand.lua
scripts/lua/commands/gm/: endevent.lua  setmaxhp.lua  setmaxmp.lua
scripts/lua/directors/: AfterQuestWarpDirector.lua  OpeningDirector.lua
scripts/lua/directors/Guildleve/: GuildleveCommon.lua  PrivateGLBattleTutorial.lua
scripts/lua/quests/: quest_template.lua
scripts/lua/quests/dft/: DftFst.lua  DftSea.lua  DftWil.lua
scripts/lua/quests/etc/: etc1g2.lua  (+42 more)
web-server/: Cargo.toml
web-server/src/: config.rs  database.rs  handlers.rs  main.rs  server.rs  session.rs  templates.rs
world-server/: Cargo.toml
world-server/src/: config.rs  data.rs  database.rs  group.rs  main.rs  managers.rs  packets.rs  processor.rs  server.rs  world_master.rs
world-server/src/packets/: receive.rs  send.rs
(+510 files in other folders)
