[workspace]
resolver = "3"
members = [
    "common",
    "lobby-server",
    "map-server",
    "world-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-or-later"
repository = "https://github.com/garlemald/garlemald-server"
authors = ["Garlemald Contributors"]

[workspace.dependencies]
common = { path = "common" }

tokio = { version = "1", features = ["full"] }
bytes = "1"
byteorder = "1"
flate2 = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
mysql_async = "0.36"
rust-ini = "0.21"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
chrono = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
