[workspace]
resolver = "3"
members = [
    "common",
    "lobby-server",
    "map-server",
    "web-server",
    "world-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-or-later"
repository = "https://github.com/swstegall/Garlemald-Server"

[workspace.dependencies]
common = { path = "common" }

tokio = { version = "1", features = ["full"] }
bytes = "1"
byteorder = "1"
flate2 = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rusqlite = "0.37"
tokio-rusqlite = { version = "0.7", features = ["bundled"] }
toml = "0.8"
md-5 = "0.10"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
mlua = { version = "0.11", features = ["lua54", "vendored", "send"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
chrono = "0.4"
axum = { version = "0.7", features = ["macros", "tokio", "http1", "form", "query"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
argon2 = "0.5"
http = "1"
percent-encoding = "2"

[profile.release]
lto = "thin"
codegen-units = 1
