[package]
name = "common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared packet, crypto, and utility primitives for the Garlemald FFXIV 1.23b server"

[dependencies]
byteorder.workspace = true
flate2.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
chrono.workspace = true
rusqlite.workspace = true
tokio-rusqlite.workspace = true

[dev-dependencies]
