[package]
name = "lobby-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "lobby-server"
path = "src/main.rs"

[dependencies]
common.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
mysql_async.workspace = true
