[package]
name = "web-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "web-server"
path = "src/main.rs"

[dependencies]
common.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
tokio-rusqlite.workspace = true
serde.workspace = true
toml.workspace = true
clap = { workspace = true }
chrono.workspace = true
rand.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
argon2.workspace = true
http.workspace = true
percent-encoding.workspace = true
