[package]
name = "world-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "world-server"
path = "src/main.rs"

[dependencies]
common.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
mysql_async.workspace = true
byteorder.workspace = true
clap.workspace = true
bytes.workspace = true
